fixed scrolling on mobile

--- a/packages/widget/widget_desktop.css
+++ b/packages/widget/widget_desktop.css
@@ -8,6 +8,7 @@
     cursor:default;
     user-select: none;
     user-drag: none;
+    touch-action: none;
 }
 
 .widget-desktop-workspace {
